libs/@local/hashql/ast/tests/ui/lower/expander/import-resolver/continue/unresolved-type.jsonc
//@ run: pass
//@ description: Tests that an unresolved type is handled by dummy replacement, allowing lowering to continue.
//@ suite#continue: true
[
  "type",
  "Foo",
  "T",
  //~^ ERROR cannot find type `T` in this scope
  "_"
]
